# soundlab-studio

./: .gitignore  .gitmodules  ADSR.cpp  ADSR.h  Adder.cpp  Adder.h  AudioModule.cpp  AudioModule.h  AudioOutput.cpp  AudioOutput.h  CMakeLists.txt  Control.cpp  Control.h  ControlADSR.cpp  ControlADSR.h  ControlModule.h  Distortion.cpp  Distortion.h  Filter.cpp  Filter.h  LFO.cpp  LFO.hpp  Module.h  NoiseGenerator.cpp  NoiseGenerator.h  Oscillator.cpp  Oscillator.h  Oscilloscope.cpp  Oscilloscope.h  README.md  Reverb.cpp  Reverb.h  SampleType.h  Sampler.cpp  Sampler.h  Spectroscope.cpp  Spectroscope.h  basic-example.cpp  basic-example2.cpp  basic-interaction-example.cpp  (+9 more)
.cache/clangd/index/: Adder.cpp.906BC0ABCB9EC0AF.idx  Adder.h.7FC9A12F27D73FE1.idx  AudioModule.cpp.0D93F55D3A798BC4.idx  AudioModule.h.5383896025857F2C.idx  AudioOutput.cpp.66C58F835F3465F7.idx  AudioOutput.h.1F919FBF6099132A.idx  Control.cpp.AFAECD91386F3954.idx  Control.h.334D19A973BED105.idx  Distortion.cpp.F2E7003D007B5369.idx  Distortion.h.A9016E4E135104ED.idx  Module.cpp.3A98B0674FA47942.idx  Module.h.6B4F46C4D5971448.idx  NoiseGenerator.cpp.832E01C68659F79E.idx  NoiseGenerator.h.398FF388C3AA5174.idx  Oscillator.cpp.60EC81CC2E113E0C.idx  Oscillator.h.154BE21E363D5532.idx  Oscilloscope.cpp.E0A16E0A77AFA1BF.idx  Oscilloscope.h.5563ADE1957ACAE6.idx  Reverb.cpp.9702289B7D659DD8.idx  Reverb.h.B237F622CB01907F.idx  SampleType.h.73CD7DC93FB30BB8.idx  Sampler.cpp.BB89E955DEC0604A.idx  Sampler.h.D4C1FFC9AE716163.idx  WaveType.h.0C75342485A216D7.idx  application.cpp.924EE32C8842FCEA.idx  application.h.92FC95140662A912.idx  basic-example.cpp.626D78AA5CEF033C.idx  crude_json.cpp.37B3AA8862B888C9.idx  crude_json.h.63FD24BCEDD151BA.idx  entry_point.cpp.DBD18A051F173F1F.idx  imconfig.h.782E5DD9EFFEBAEB.idx  imgui.cpp.CC06C81A5443FDDB.idx  imgui.h.5FE7839B5E4D8421.idx  imgui_bezier_math.h.6C4D122DA90A9556.idx  imgui_bezier_math.inl.4B9954B926767990.idx  imgui_canvas.cpp.91D7736090D6D878.idx  imgui_canvas.h.F5EC44B2648C47E6.idx  imgui_demo.cpp.DDE3DE1E9D31BEE0.idx  imgui_draw.cpp.473C95F371B15A7F.idx  imgui_extra_keys.h.D38BA7D5685A4D8D.idx  (+27 more)
libs/: CMakeLists.txt
libs/SDL2/: SDL_config.h  libSDL2.dylib  sdl2-config-version.cmake
src/: ADSR.cpp  ADSR.h  Adder.cpp  Adder.h  AudioOutput.cpp  AudioOutput.h  Control.cpp  Control.h  ControlModule.h  Distortion.cpp  Distortion.h  Filter.cpp  Filter.h  LFO.h  Module.cpp  Module.h  NoiseGenerator.cpp  NoiseGenerator.h  Oscillator.cpp  Oscillator.h  Oscilloscope.cpp  Oscilloscope.h  Piano.cpp  Piano.h  Reverb.cpp  Reverb.h  SampleType.h  Sampler.cpp  Sampler.h  Sequencer.cpp  Sequencer.h  Spectroscope.cpp  Spectroscope.h  WaveType.h
test/: module.cpp  oscillator.cpp
themes/: themes.cpp  themes.h
